lib/libremidi-5.4.3/tests/corpus/Invalid/No Header Chunk/rainman1.mid
vti_encoding:SR|utf8-nl
vti_author:SR|madeitaly.geo
vti_syncwith_www.animazione.net\:80:TR|17 Jul 2000 13:33:55 -0000
vti_timelastmodified:TR|17 Jul 2000 13:33:55 -0000
vti_modifiedby:SR|madeitaly.geo
vti_timecreated:TR|19 Jul 2000 07:53:45 -0000
vti_backlinkinfo:VX|index.htm
vti_extenderversion:SR|4.0.2.3712
vti_syncwith_localhost\\c\:\\documenti\\web\\madeitaly/c\:/documenti/web/madeitaly:TR|17 Jul 2000 13:33:55 -0000
